# Mediux-Posters

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  buriedincode.json  pylock.toml  pyproject.toml  temp.json  zardooohasselfrau.json
.github/: dependabot.yaml  zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: generate-previews.yaml  help-previews.yaml  linting.yaml  publishing.yaml  rich-codex.yaml  testing.yaml
mediux_posters/: __init__.py  __main__.py  console.py  constants.py  errors.py  jellyfin.py  mediux.py  plex.py  settings.py  sqlite_cache.py  utils.py
mediux_posters/cli/: __init__.py  _typer.py  common.py  enum.py  jellyfin.py  media.py  parser.py  plex.py  set.py  settings.py  sync.py
mediux_posters/mediux/: __init__.py  schemas.py  service.py
mediux_posters/new/: cli.py  mediux.py  plex.py
mediux_posters/services/: __init__.py  _base.py  jellyfin.py  plex.py  service_cache.py
mediux_posters/services/_base/: __init__.py  schemas.py  service.py
mediux_posters/services/jellyfin/: __init__.py  schemas.py  service.py
mediux_posters/services/plex/: __init__.py  api_schemas.py  api_service.py  schemas.py  service.py
tests/: application_test.py  conftest.py  jellyfin_test.py  mediux_test.py  plex_test.py
tests/resources/jellyfin/: get-movie.json  get-show.json  list-episodes.json  list-libraries.json  list-movies.json  list-seasons.json  list-shows.json
tests/resources/plex/: get-collection.json  get-movie.json  get-show.json  list-collection-movies.json  list-collections.json  list-episodes.json  list-libraries.json  list-movies.json  list-seasons.json  list-shows.json
visage/: __init__.py  __main__.py  settings.py  utils.py
visage/cli/: __init__.py  settings.py
visage/mediux/: __init__.py  schemas.py  service.py
visage/services/: __init__.py  service_cache.py
visage/services/_base/: __init__.py  schemas.py  service.py
visage/services/jellyfin/: __init__.py  schemas.py  service.py
visage/services/plex/: __init__.py  schemas.py  service.py
