[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mdformat >= 1.0.0",
  "mdformat-gfm >= 1.0.0",
  "mdformat-ruff >= 0.1.0",
  "prek >= 0.3.0",
  "ruff >= 0.15.0",
  "toml-sort >= 0.24.0",
  "ty >= 0.0.21",
]
tests = [
  "pytest >= 9.0.0",
  "pytest-cov >= 7.0.0",
  "pytest-httpx >= 0.36.0",
  "tox >= 4.49.0",
  "tox-uv >= 1.33.0",
]

[project]
authors = [{email = "BuriedInCode@tuta.io", name = "BuriedInCode"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "gql[httpx] >= 4.0.0",
  "httpx[http2] >= 0.28.0",
  "pydantic >= 2.12.0",
  "questionary >= 2.1.0",
  "rich >= 14.3.0",
  "tomli >= 2.4.0 ; python_version < '3.11'",
  "tomli-w >= 1.2.0",
  "typer >= 0.24.0",
]
description = "Fetches Show, Movie, and Collection cover art from Mediux and updates Plex/Jellyfin using TMDB IDs."
dynamic = ["version"]
keywords = []
license = "MIT"
license-files = ["LICENSE"]
name = "mediux-posters"
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
Mediux-Posters = "mediux_posters.__main__:app"
mediux-posters = "mediux_posters.__main__:app"

[project.urls]
Homepage = "https://pypi.org/project/Mediux-Posters"
Issues = "https://github.com/Buried-In-Code/Mediux-Posters/issues"
Source = "https://github.com/Buried-In-Code/Mediux-Posters"

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
source = ["mediux_posters"]

[tool.hatch.build.targets.sdist]
exclude = [".github/"]

[tool.hatch.version]
path = "mediux_posters/__init__.py"

[tool.pytest.ini_options]
addopts = ["--cov"]

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "C901",
  "COM812",
  "D",
  "EM",
  "FBT",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "PLW2901",
  "TCH",
  "TRY003",
  "TRY300",
  "TRY400",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "pydantic.field_validator",
  "pydantic.model_validator",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.tomlsort]
all = true
ignore_case = true
trailing_comma_inline_array = true
overrides."tool.tox.env_list".inline_arrays = false
overrides."tool.tox.testenv.commands".inline_arrays = false

[tool.tox]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]
min_version = "4.22"

[tool.tox.env_run_base]
commands = [["pytest"]]
dependency_groups = ["tests"]
passenv = ["JELLYFIN__BASE_URL", "JELLYFIN__TOKEN", "MEDIUX__BASE_URL", "MEDIUX__TOKEN", "PLEX__BASE_URL", "PLEX__TOKEN"]

[tool.ty.src]
exclude = ["**/tests/"]
include = ["**/mediux_posters"]
